Try to fix vertical button spacing

--- a/games/picross/picross.css
+++ b/games/picross/picross.css
@@ -1,4 +1,5 @@
 #board {
+  border-collapse: collapse;
   text-align: center;
 }
 
@@ -19,6 +20,8 @@
   width: 15px;
   height: 15px;
   margin: 0;
+  line-height: 15px;
+  display: block;
 }
 
 .boardButton[data-state="unpressed"] {
